change main docs
